--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link rel="stylesheet" href="./css/styles.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
-<body>
+<body class="page">
     <header>
         <nav>
-        <a href="">WebStudio</a>
+        <a href="" class="logo">Web<span>Studio</span></a>
         
-            <ul>
+            <ul class="site-nav">
                 <li>
-                    <a href="">Студия</a>
+                    <a href="" class="stydio current">Студия</a>
                 </li>
                 <li>
-                    <a href="">Портфолио</a>
+                    <a href="./portfolio.html">Портфолио</a>
                 </li>
                 <li>
                     <a href="">Контакты</a>
                 </li>
             </ul>         
         </nav>
-        <ul>
+        <ul class="auth-nav">
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class:="mail">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class:="tel">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
