--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     <a href="" class="stydio current">Студия</a>
                 </li>
                 <li>
-                    <a href="./portfolio.html">Портфолио</a>
+                    <a href="./portfolio.html" class="portfolio">Портфолио</a>
                 </li>
                 <li>
-                    <a href="">Контакты</a>
+                    <a href="" class="contacts">Контакты</a>
                 </li>
             </ul>         
         </nav>
