--- a/index.html
+++ b/index.html
@@ -26,41 +26,44 @@
         </nav>
         <ul class="auth-nav">
             <li>
-                <a href="mailto:info@devstudio.com" class:="mail">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111" class:="tel">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="tel">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
     <main>
-    <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
+        <!-- Герой -->
+    <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
     </section>
-    <section>
+
+    <section class="features">
         <h2>Наши особенности</h2>
         <ul>
             <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <h3 class="features-title">Внимание к деталям</h3>
+                <p class="features-description-title">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <h3 class="features-title">Пунктуальность</h3>
+                <p class="features-description-title">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <h3 class="features-title">Планирование</h3>
+                <p class="features-description-title">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <h3 class="features-title">Современные технологии</h3>
+                <p class="features-description-title">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
     </section>
-    <section>
-        <h2>Чем мы занимаемся</h2>
+
+    <section class="work">
+        <h2 class="work-title">Чем мы занимаемся</h2>
         <ul>
             <li>
                 <img src="./images/box1.jpg" alt="десктопные приложения" width="370">
@@ -73,35 +76,36 @@
             </li>
         </ul>
     </section>
-    <section>
-        <h2>Наша команда</h2>
+
+    <section class="tiam">
+        <h2 class="tiam-title">Наша команда</h2>
         <ul>
             <li>
                 <img src="./images/img1.jpg" alt="Фотография Игоря Демьяненко" width="270">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
+                <h3 class="tiam-name">Игорь Демьяненко</h3>
+                <p class="tiam-name-title">Product Designer</p>
             </li>
             <li>
                 <img src="./images/img2.jpg" alt="Фотография Ольги Репиной" width="270">
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
+                <h3 class="tiam-name">Ольга Репина</h3>
+                <p class="tiam-name-title">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/img3.jpg" alt="Фотография Николая Тарасова" width="270">
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
+                <h3 class="tiam-name">Николай Тарасов</h3>
+                <p class="tiam-name-title">Marketing</p>
             </li>
             <li>
                 <img src="./images/img4.jpg" alt="Фотография Михаила Ермакова" width="270">
-                <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p>
+                <h3 class="tiam-name">Михаил Ермаков</h3>
+                <p class="tiam-name-title">UI Designer</p>
             </li>
         </ul>
     </section>
     </main>
 
     <footer>
-        <a href="">WebStudio</a>
+        <a href="" class="logo-footer">Web<span>Studio</span></a>
     
         <address>
             <ul>
