--- a/portfolio.html
+++ b/portfolio.html
@@ -19,19 +19,19 @@
                     <a href="./index.html" class="stydio">Студия</a>
                 </li>
                 <li>
-                    <a href=""class="portfolio current">Портфолио</a>
+                    <a href="" class="portfolio current">Портфолио</a>
                 </li>
                 <li>
-                    <a href="">Контакты</a>
+                    <a href="" class="contacts">Контакты</a>
                 </li>
             </ul>
         </nav>
         <ul class="auth-nav">
             <li>
-                <a href="mailto:info@devstudio.com" class:="mail">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111" class:="tel">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="tel">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -40,7 +40,7 @@
     </main>
 
     <footer>
-        <a href="">WebStudio</a>
+        <a href="" class="logo-footer">Web<span>Studio</span></a>
 
         <address>
             <ul>
