--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,24 @@
         </ul>
     </header>
     <main>
-       
+       <!-- Фільтр -->
+       <section>
+           <h2>Фильтр</h2>
+            <ul>
+                <li><a href="">Все</a></li>
+                <li><a href="">Веб-сайты</a></li>
+                <li><a href="">Приложения</a></li>
+                <li><a href="">Дизайн</a></li>
+                <li><a href="">Маркетинг</a></li>
+            </ul>
+       </section>
+
+       <!-- Портфоліо -->
+       <section>
+            
+       </section>
+
+
     </main>
 
     <footer>
