--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,54 @@
 
        <!-- Портфоліо -->
        <section>
-            
+           <h2>Проекты</h2>
+           <ul>
+               <li>
+                   <img src="./images/crak.jpg" alt="Ноутбук с фотографией Веб-сайта" width="370">
+                   <h3>Технокряк</h3>
+                   <p>Веб-сайт</p>
+               </li>
+               <li>
+                   <img src="./images/poster.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                   <h3>Постер New Orlean vs Golden Star</h3>
+                   <p>Дизайн</p>
+               </li>
+               <li>
+                   <img src="./images/seafood.jpg" alt=" Название ресторана seafood" width="370">
+                   <h3>Ресторан Seafood</h3>
+                   <p>Приложение</p>
+               </li>
+               <li>
+                   <img src="./images/prime.jpg" alt="Гарнитура" width="370">
+                   <h3>Проект Prime</h3>
+                   <p>Маркетинг</p>
+               </li>
+               <li>
+                   <img src="./images/box.jpg" alt="Две коробки" width="370">
+                   <h3>Проект Boxes</h3>
+                   <p>Приложение</p>
+               </li>
+               <li>
+                   <img src="./images/borders.jpg" alt="Монитор с фотографией Веб-сайта" width="370">
+                   <h3>Inspiration has no Borders</h3>
+                   <p>Веб-сайт</p>
+               </li>
+               <li>
+                   <img src="./images/edition.jpg" alt="Откытый журнал" width="370">
+                   <h3>Издание Limited Edition</h3>
+                   <p>Дизайн</p>
+               </li>
+               <li>
+                   <img src="./images/lab.jpg" alt="Бирка LAB EL TAG">
+                   <h3>Проект LAB</h3>
+                   <p>Маркетинг</p>
+               </li>
+               <li>
+                   <img src="./images/growing.jpg" alt="Ноутбук с фотографией Веб-сайта" width="370">
+                   <h3>Growing Business</h3>
+                   <p>Приложение</p>
+               </li>
+           </ul>
        </section>
 
 
