--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body class="page">
     <header>
         <nav>
-        <a href="" class="logo">Web<span>Studio</span></a>
+        <a href="./index.html" class="logo">Web<span>Studio</span></a>
         
             <ul class="site-nav">
                 <li>
-                    <a href="" class="stydio current">Студия</a>
+                    <a href="./index.html" class="stydio current">Студия</a>
                 </li>
                 <li>
                     <a href="./portfolio.html" class="portfolio">Портфолио</a>
@@ -105,7 +105,7 @@
     </main>
 
     <footer>
-        <a href="" class="logo-footer">Web<span>Studio</span></a>
+        <a href="./index.html" class="logo-footer">Web<span>Studio</span></a>
     
         <address>
             <ul>
