--- a/portfolio.html
+++ b/portfolio.html
@@ -12,14 +12,14 @@
 <body class="page">
     <header>
         <nav>
-            <a href="" class="logo">Web<span>Studio</span></a>
+            <a href="./index.html" class="logo">Web<span>Studio</span></a>
 
             <ul class="site-nav">
                 <li>
                     <a href="./index.html" class="stydio">Студия</a>
                 </li>
                 <li>
-                    <a href="" class="portfolio current">Портфолио</a>
+                    <a href="./portfolio.html" class="portfolio current">Портфолио</a>
                 </li>
                 <li>
                     <a href="" class="contacts">Контакты</a>
@@ -39,12 +39,12 @@
        <!-- Фільтр -->
        <section>
            <h2>Фильтр</h2>
-            <ul>
-                <li><a href="">Все</a></li>
-                <li><a href="">Веб-сайты</a></li>
-                <li><a href="">Приложения</a></li>
-                <li><a href="">Дизайн</a></li>
-                <li><a href="">Маркетинг</a></li>
+            <ul class="filter">
+                <li><a href="" class="buttons active">Все</a></li>
+                <li><a href="" class="buttons">Веб-сайты</a></li>
+                <li><a href="" class="buttons">Приложения</a></li>
+                <li><a href="" class="buttons">Дизайн</a></li>
+                <li><a href="" class="buttons">Маркетинг</a></li>
             </ul>
        </section>
 
@@ -54,48 +54,48 @@
            <ul>
                <li>
                    <img src="./images/crak.jpg" alt="Ноутбук с фотографией Веб-сайта" width="370">
-                   <h3>Технокряк</h3>
-                   <p>Веб-сайт</p>
+                   <h3 class="projeck">Технокряк</h3>
+                   <p class="projeck-title">Веб-сайт</p>
                </li>
                <li>
                    <img src="./images/poster.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                   <h3>Постер New Orlean vs Golden Star</h3>
-                   <p>Дизайн</p>
+                   <h3 class="projeck">Постер New Orlean vs Golden Star</h3>
+                   <p class="projeck-title">Дизайн</p>
                </li>
                <li>
                    <img src="./images/seafood.jpg" alt=" Название ресторана seafood" width="370">
-                   <h3>Ресторан Seafood</h3>
-                   <p>Приложение</p>
+                   <h3 class="projeck">Ресторан Seafood</h3>
+                   <p class="projeck-title">Приложение</p>
                </li>
                <li>
                    <img src="./images/prime.jpg" alt="Гарнитура" width="370">
-                   <h3>Проект Prime</h3>
-                   <p>Маркетинг</p>
+                   <h3 class="projeck">Проект Prime</h3>
+                   <p class="projeck-title">Маркетинг</p>
                </li>
                <li>
                    <img src="./images/box.jpg" alt="Две коробки" width="370">
-                   <h3>Проект Boxes</h3>
-                   <p>Приложение</p>
+                   <h3 class="projeck">Проект Boxes</h3>
+                   <p class="projeck-title">Приложение</p>
                </li>
                <li>
                    <img src="./images/borders.jpg" alt="Монитор с фотографией Веб-сайта" width="370">
-                   <h3>Inspiration has no Borders</h3>
-                   <p>Веб-сайт</p>
+                   <h3 class="projeck">Inspiration has no Borders</h3>
+                   <p class="projeck-title">Веб-сайт</p>
                </li>
                <li>
                    <img src="./images/edition.jpg" alt="Откытый журнал" width="370">
-                   <h3>Издание Limited Edition</h3>
-                   <p>Дизайн</p>
+                   <h3 class="projeck">Издание Limited Edition</h3>
+                   <p class="projeck-title">Дизайн</p>
                </li>
                <li>
                    <img src="./images/lab.jpg" alt="Бирка LAB EL TAG">
-                   <h3>Проект LAB</h3>
-                   <p>Маркетинг</p>
+                   <h3 class="projeck">Проект LAB</h3>
+                   <p class="projeck-title">Маркетинг</p>
                </li>
                <li>
                    <img src="./images/growing.jpg" alt="Ноутбук с фотографией Веб-сайта" width="370">
-                   <h3>Growing Business</h3>
-                   <p>Приложение</p>
+                   <h3 class="projeck">Growing Business</h3>
+                   <p class="projeck-title">Приложение</p>
                </li>
            </ul>
        </section>
@@ -104,7 +104,7 @@
     </main>
 
     <footer>
-        <a href="" class="logo-footer">Web<span>Studio</span></a>
+        <a href="./index.html" class="logo-footer">Web<span>Studio</span></a>
 
         <address>
             <ul>
