--- a/portfolio.html
+++ b/portfolio.html
@@ -40,11 +40,11 @@
        <section>
            <h2>Фильтр</h2>
             <ul class="filter">
-                <li><a href="" class="buttons active">Все</a></li>
-                <li><a href="" class="buttons">Веб-сайты</a></li>
-                <li><a href="" class="buttons">Приложения</a></li>
-                <li><a href="" class="buttons">Дизайн</a></li>
-                <li><a href="" class="buttons">Маркетинг</a></li>
+                <li><button type="button">Все</button></li>
+                <li><button type="button">Веб-сайты</button></li>
+                <li><button type="button">Приложения</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
             </ul>
        </section>
 
