--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     
         <address>
             <ul>
-                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="" class="address">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="address">+38 096 111 11 11</a></li>
             </ul>
            
         </address>
