--- a/portfolio.html
+++ b/portfolio.html
@@ -12,91 +12,88 @@
 </head>
 
 <body class="page">
-    <header>
+    <header class="heading">
         <nav>
-            <a href="./index.html" class="logo">Web<span>Studio</span></a>
+            <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
 
             <ul class="site-nav">
                 <li>
-                    <a href="./index.html" class="stydio">Студия</a>
+                    <a href="./index.html" class="stydio nav">Студия</a>
                 </li>
                 <li>
-                    <a href="./portfolio.html" class="portfolio current">Портфолио</a>
+                    <a href="./portfolio.html" class="portfolio current nav">Портфолио</a>
                 </li>
                 <li>
-                    <a href="" class="contacts">Контакты</a>
+                    <a href="" class="contacts nav">Контакты</a>
                 </li>
             </ul>
         </nav>
         <ul class="auth-nav">
             <li>
-                <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="mail nav">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111" class="tel">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="tel nav">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
-    <main>
-       <!-- Фільтр -->
+    <main class="mainly">
+       
        <section>
-           <h2>Фильтр</h2>
+            <h1>Проекты</h1>
+            <!-- Фільтр -->
             <ul class="filter">
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button type="button" class="filter-button">Все</button></li>
+                <li><button type="button" class="filter-button">Веб-сайты</button></li>
+                <li><button type="button" class="filter-button">Приложения</button></li>
+                <li><button type="button" class="filter-button">Дизайн</button></li>
+                <li><button type="button" class="filter-button">Маркетинг</button></li>
             </ul>
-       </section>
-
-       <!-- Портфоліо -->
-       <section>
-           <h2>Проекты</h2>
+            <!-- Портфоліо -->
            <ul>
                <li>
                    <img src="./images/crak.jpg" alt="Ноутбук с фотографией Веб-сайта" width="370">
-                   <h3 class="projeck">Технокряк</h3>
+                   <h2 class="projeck">Технокряк</h2>
                    <p class="projeck-title">Веб-сайт</p>
                </li>
                <li>
                    <img src="./images/poster.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                   <h3 class="projeck">Постер New Orlean vs Golden Star</h3>
+                   <h2 class="projeck">Постер New Orlean vs Golden Star</h2>
                    <p class="projeck-title">Дизайн</p>
                </li>
                <li>
                    <img src="./images/seafood.jpg" alt=" Название ресторана seafood" width="370">
-                   <h3 class="projeck">Ресторан Seafood</h3>
+                   <h2 class="projeck">Ресторан Seafood</h2>
                    <p class="projeck-title">Приложение</p>
                </li>
                <li>
                    <img src="./images/prime.jpg" alt="Гарнитура" width="370">
-                   <h3 class="projeck">Проект Prime</h3>
+                   <h2 class="projeck">Проект Prime</h2>
                    <p class="projeck-title">Маркетинг</p>
                </li>
                <li>
                    <img src="./images/box.jpg" alt="Две коробки" width="370">
-                   <h3 class="projeck">Проект Boxes</h3>
+                   <h2 class="projeck">Проект Boxes</h2>
                    <p class="projeck-title">Приложение</p>
                </li>
                <li>
                    <img src="./images/borders.jpg" alt="Монитор с фотографией Веб-сайта" width="370">
-                   <h3 class="projeck">Inspiration has no Borders</h3>
+                   <h2 class="projeck">Inspiration has no Borders</h2>
                    <p class="projeck-title">Веб-сайт</p>
                </li>
                <li>
                    <img src="./images/edition.jpg" alt="Откытый журнал" width="370">
-                   <h3 class="projeck">Издание Limited Edition</h3>
+                   <h2 class="projeck">Издание Limited Edition</h2>
                    <p class="projeck-title">Дизайн</p>
                </li>
                <li>
                    <img src="./images/lab.jpg" alt="Бирка LAB EL TAG">
-                   <h3 class="projeck">Проект LAB</h3>
+                   <h2 class="projeck">Проект LAB</h2>
                    <p class="projeck-title">Маркетинг</p>
                </li>
                <li>
                    <img src="./images/growing.jpg" alt="Ноутбук с фотографией Веб-сайта" width="370">
-                   <h3 class="projeck">Growing Business</h3>
+                   <h2 class="projeck">Growing Business</h2>
                    <p class="projeck-title">Приложение</p>
                </li>
            </ul>
@@ -105,14 +102,14 @@
 
     </main>
 
-    <footer>
-        <a href="./index.html" class="logo-footer">Web<span>Studio</span></a>
+    <footer class="page-footer">
+        <a href="./index.html" class="logo-footer"><span class="logo-footer-web">Web</span>Studio</a>
 
         <address>
             <ul>
-                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="" class="address">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com" class="footer-address">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="footer-address">+38 096 111 11 11</a></li>
             </ul>
 
         </address>
